[package]
name = "snapapi"
version = "0.1.0"
authors = ["Kleinmarb <kleinmarb@skiff.com>"]
edition = "2021"
rust-version = "1.73.0"
description = "SnapAPI is a blazingly fast Rust framework which provides a simple way of creating CRUD APIs by offering an HTTP server and SQL clients."
documentation = "https://docs.rs/snapapi"
readme = "README.md"
homepage = "https://github.com/kleinmarb/snapapi"
repository = "https://github.com/kleinmarb/snapapi"
license = "MIT OR Apache-2.0"
keywords = ["framework", "http", "client", "server", "fast"]
categories = ["framework", "http", "sync"]

[dependencies]
rustc-hash = "1.1.0"
threatpool = "0.1.0"
byteorder = "1.5.0"

[profile.dev]
opt-level = 0
debug = true
lto = "off"
incremental = true

[profile.release]
opt-level = 3
debug = false
lto = "fat"
incremental = false
codegen-units = 1
